[package]
name = "candle-nano-vllm"
version = "0.1.0"
edition = "2024"


[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/model",
    "crates/cache",
    "crates/scheduler", "crates/layers", "crates/utils",
]

[workspace.dependencies]
accelerate-src = { version = "0.3.2" }
metal = { version = "0.32.0", features = ["mps"]}

# Core ML Framework & Kernels
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-transformers = "0.9.1"
candle-paged-attention = { git = "https://github.com/huggingface/candle-paged-attention" }
safetensors = "0.6.0"

# Hugging Face Ecosystem
hf-hub = "0.4.3"
tokenizers = "0.21.2"

# Utilities
anyhow = "1.0.98"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
xxhash-rust = { version = "0.8.10", features = ["xxh64"] }
thiserror = "2.0.12"

# Async & Concurrency
tokio = { version = "1", features = ["full"] }



